optimization: use valueOf instead of constructor